--- a/YokoManual/en.lproj/YKViewController.xib
+++ b/YokoManual/en.lproj/YKViewController.xib
@@ -122,6 +122,7 @@
 						<string key="NSFrame">{{35, 380}, {100, 34}}</string>
 						<reference key="NSSuperview" ref="774585933"/>
 						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
